--- a/website_v2/_sass/_responsive-common.scss
+++ b/website_v2/_sass/_responsive-common.scss
@@ -1,3 +1,21 @@
+// ---------------------------------------------------------------------------
+// Change size of container for wider screens
+// ----------------------------------------------------------------------------
+@media all and (min-width: 1400px){
+  .container {
+    width: 40%;
+  }
+}
+
+// ---------------------------------------------------------------------------
+// Change margins of container for taller screens
+// ----------------------------------------------------------------------------
+// @media all and (min-height: 1400px){
+//   .container {
+//     margin: 40px auto 40px auto
+//   }
+// }
+
 // ----------------------------------------------------------------------------
 // Center text in header
 // ----------------------------------------------------------------------------
@@ -44,17 +62,21 @@
 @media all and (max-width: 685px){
 
   footer{
-    text-align: center;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
 
     h1 {
-      float: none;
       padding-right: 0;
-    }
-
-    ul {
-      float: none;
+      grid-row: 2;
       padding-top: 15px;
+      text-align: center;
     }
+  }
+
+  .social-links {
+    text-align: center;
+    grid-row: 1;
+    grid-column: 1;
   }
 
   // Update width of container
@@ -72,20 +94,31 @@
   // Footer
   .social-icons {
     display: block;
+    text-align: center;
+    grid-row: 1;
+    grid-column: 1;
   }
 
   .social-links{
     display: none;
   }
 
-  footer ul {
-    padding-top: 0;
-    padding-bottom: 15px;
+  footer {
+
+    h1 {
+      padding-top: 0;
+    }
+
+    ul {
+      padding-top: 0;
+      padding-bottom: 15px;
+    }
 
     li a {
       font-size: 20px;
       line-height: 14px;
     }
+
   }
 
   // Header
