--- a/website_v2/_sass/_responsive-pages.scss
+++ b/website_v2/_sass/_responsive-pages.scss
@@ -1,6 +1,34 @@
+// ----------------------------------------------------------------------------
 // Home
+// ----------------------------------------------------------------------------
 @media all and (max-width: 560px ){
   .beginText{
     font-size: 22px;
+  }
+}
+
+// ----------------------------------------------------------------------------
+// Contact
+// ----------------------------------------------------------------------------
+@media all and (max-width: 615px){
+  .form-grid-container {
+    grid-template-rows: auto auto auto auto;
+  }
+
+  .form-name {
+    grid-column: 1 / span 2;
+  }
+
+  .form-email {
+    grid-row: 2;
+    grid-column: 1 / span 2;
+  }
+
+  .form-msg {
+    grid-row: 3;
+  }
+
+  .form-submit {
+    grid-row: 4;
   }
 }
