--- a/website_v2/_sass/main.scss
+++ b/website_v2/_sass/main.scss
@@ -2,7 +2,11 @@
 @import "general";
 @import "header";
 @import "footer";
-@import "home";
 @import "jumbotron";
+@import "home";
+@import "resume";
+@import "projects";
+@import "photography";
+@import "contact";
 @import "responsive-common";
 @import "responsive-pages";
