--- a/website_v2/_sass/_responsive-pages.scss
+++ b/website_v2/_sass/_responsive-pages.scss
@@ -32,3 +32,20 @@
     grid-row: 4;
   }
 }
+
+// ----------------------------------------------------------------------------
+// Contact Form Submit Successful
+// ----------------------------------------------------------------------------
+@media all and (max-width: 615px){
+  .large-centered {
+    font-size: 30px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    line-height: 35px;
+  }
+
+  .reg-centered {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
