Done w/ projects page + subpages.

--- a/website_v2/_layouts/no_jumbotron.html
+++ b/website_v2/_layouts/no_jumbotron.html
@@ -4,7 +4,7 @@
 <body>
   {% include header.html %}
 
-    <main class = "container">
+    <main class = "container proj-container">
       {{ content }}
     </main>
 
