--- a/website_v2/_sass/_responsive-pages.scss
+++ b/website_v2/_sass/_responsive-pages.scss
@@ -8,6 +8,22 @@
 }
 
 // ----------------------------------------------------------------------------
+// Projects
+// ----------------------------------------------------------------------------
+// Tablet
+@media all and (max-width:810px){
+  .proj-img {
+    width: 100%;
+  }
+}
+
+// Mobile
+@media all and (max-width: 615px){
+  .proj-img {
+    height: 200px;
+  }
+}
+// ----------------------------------------------------------------------------
 // Contact
 // ----------------------------------------------------------------------------
 @media all and (max-width: 615px){
