--- a/website_v2/_sass/_contact.scss
+++ b/website_v2/_sass/_contact.scss
@@ -1,10 +1,8 @@
 .contact-form form {
+  @extend %title-text;
   padding-top: 20px;
   color: $medium;
-  font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  word-spacing: 2px;
 }
 
 input[type=text],
@@ -12,7 +10,7 @@ input[type=email],
 textarea {
   box-sizing: border-box;
   color: $dark;
-  border: 1px solid $gray;
+  border: 1px solid $lightGray;
   padding: 5px;
   outline: none;
 }
@@ -22,22 +20,13 @@ textarea {
 }
 
 input[type=submit] {
+  @extend %title-text;
+  @extend %btn;
   font-family: $main-fonts;
-  font-weight: 700;
-  color: white;
-  text-shadow: 0 3px $grayOpacity;
-  background: $medium;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  word-spacing: 2px;
-  border: none;
-  padding: 10px;
-  box-shadow: 0 3px $grayOpacity;
 
   &:hover {
-    text-shadow: none;
-    box-shadow: inset 0 0 5px $grayOpacity;
-    background: $darkAccent;
+    @extend %btn-hover;
   }
 }
 
