--- a/website_v2/_sass/_general.scss
+++ b/website_v2/_sass/_general.scss
@@ -13,7 +13,7 @@ $darkAccent: #e4ab74;
 // ----------------------------------------------------------------------------
 // Fonts
 // ----------------------------------------------------------------------------
-$titleSize: 20px;
+$titleSize: 25px;
 $copySize: 16px;
 $main-fonts: 'Raleway', Helvetica, Arial, sans-serif;
 
@@ -35,6 +35,29 @@ $main-fonts: 'Raleway', Helvetica, Arial, sans-serif;
   display: inline;
 }
 
+// Used for titles
+%title-text {
+  letter-spacing: 2px;
+  word-spacing: 2px;
+  font-weight: 700;
+}
+
+%btn {
+  color: white;
+  text-shadow: 0 3px $grayOpacity;
+  background: $medium;
+  border: none;
+  padding: 10px;
+  box-shadow: 0 3px $grayOpacity;
+}
+
+%btn-hover {
+  text-shadow: none;
+  box-shadow: inset 0 0 5px $grayOpacity;
+  background: $darkAccent;
+  border: none;
+}
+
 // ----------------------------------------------------------------------------
 html, body {
   font-family: $main-fonts;
@@ -48,9 +71,14 @@ html, body {
   background-color: white;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 ::selection {
@@ -58,7 +86,7 @@ body {
   background: $accent;
 }
 
-.container{
+.container {
   box-sizing: border-box;
   width: 60%;
   margin: auto;
@@ -66,17 +94,23 @@ body {
   line-height: 22px;
 
   h1 {
-    margin-bottom: 15px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    font-weight: 700;
+    margin-bottom: 10px;
     color: $darkAccent;
     font-size: $titleSize;
-    font-weight: 700;
-    letter-spacing: 2px;
+    line-height: 30px;
   }
 
   p {
     margin-bottom: 15px;
     color: $dark;
     font-size: $copySize
+  }
+
+  p + h1 {
+    margin-top: 30px;
   }
 
   a {
@@ -91,7 +125,10 @@ body {
       padding-bottom: 1px;
     }
   }
+}
 
+.proj-container {
+  margin: 40px auto auto auto;
 }
 
 .line {
