Done w/ initial resume page (HTML + CSS).

--- a/website_v2/_includes/footer.html
+++ b/website_v2/_includes/footer.html
@@ -6,7 +6,7 @@
   <div class = "social-icons">
     <ul>
       {% for item in site.data.social %}
-      <li><a href = "{{ item.link }}">
+      <li><a href = "{{ item.link }}" target = "_blank">
         <i class = "{{ item.icon }}" title = "{{ item.name }}"></i>
       </a></li>
       {% endfor %}
@@ -17,7 +17,7 @@
   <div class = "social-links">
     <ul>
       {% for item in site.data.social %}
-      <li><a href = "{{ item.link }}">{{ item.name }}</a></li>
+      <li><a href = "{{ item.link }}" target = "_blank">{{ item.name }}</a></li>
       {% endfor %}
     </ul>
   </div>
