--- a/website_v2/_includes/scripts.html
+++ b/website_v2/_includes/scripts.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,400i,700" rel="stylesheet">
 
 <!-- jQuery -->
 <script
