--- a/website_v2/_layouts/projects_page.html
+++ b/website_v2/_layouts/projects_page.html
@@ -11,7 +11,7 @@ layout: no_jumbotron
 
 <!-- GitHub repo button  -->
 {% if page.github %}
-<a href = "{{ page.github }}" class = "proj-btn github-btn">See on GitHub
+<a href = "{{ page.github }}" target = "_blank" class = "proj-btn github-btn">See on GitHub
 <i class="fab fa-github"></i></a>
 {% endif %}
 
