--- a/website_v2/_includes/resume_projects.html
+++ b/website_v2/_includes/resume_projects.html
@@ -1,6 +1,6 @@
 <div class = "resume-section-container" id = "projects">
 
-  <div class = "resume-section-title">Projects</div>
+  <div class = "resume-section-title">Featured Projects</div>
 
   {% for proj in site.data.resume_projects %}
   <div class = "resume-org">{{ proj.title }}</div>
