--- a/website_v2/_includes/resume_student_involvement.html
+++ b/website_v2/_includes/resume_student_involvement.html
@@ -1,7 +1,7 @@
 <div class = "resume-section-container" id = "student-involvement">
   <div class = "resume-section-title">Student Involvement</div>
 
-  {% for involvement in site.data.resume_sections.studentInvolvement %}
+  {% for involvement in site.data.resume_student_involvement %}
   <div class = "resume-org">{{ involvement.org }}</div>
   <div class = "resume-dates">{{ involvement.dates }}</div>
   <div class = "resume-role">{{ involvement.role }}</div>
