--- a/website_v2/_includes/resume_work.html
+++ b/website_v2/_includes/resume_work.html
@@ -2,7 +2,7 @@
 
   <div class = "resume-section-title">Work Experience</div>
 
-  {% for entry in site.data.resume_sections.work %}
+  {% for entry in site.data.resume_work %}
   <div class = "resume-org">{{ entry.org }}</div>
   <div class = "resume-dates">{{ entry.dates }}</div>
   <div class = "resume-role">{{ entry.role }}</div>
