--- a/website_v2/_layouts/resume_page.html
+++ b/website_v2/_layouts/resume_page.html
@@ -6,9 +6,9 @@
   {% include header.html %}
   {% include jumbotron.html %}
 
-    <main class = "resume-container">
+    <div class = "resume-container">
       {{ content }}
-    </main>
+    </div>
 
     {% include footer.html %}
     {% include scripts.html %}
