Updated projects pages.

--- a/website_v2/_layouts/projects_page.html
+++ b/website_v2/_layouts/projects_page.html
@@ -9,10 +9,25 @@ layout: no_jumbotron
   {% endif %}
 {% endfor %}
 
+{% if page.github and page.demo %}
+  <div class = "proj-btn-link-container">
+    <a href = "{{ page.github }}" target = "_blank" class = "proj-btn github-btn-left">See on GitHub
+    <i class="fab fa-github"></i></a>
+
+    <a href = "{{ page.demo }}" target = "_blank" class = "proj-btn demo-btn-right">See Live Demo
+    <i class="fas fa-desktop"></i></a>
+  </div>
+
 <!-- GitHub repo button  -->
-{% if page.github %}
-<a href = "{{ page.github }}" target = "_blank" class = "proj-btn github-btn">See on GitHub
-<i class="fab fa-github"></i></a>
+{% elsif page.github %}
+  <a href = "{{ page.github }}" target = "_blank" class = "proj-btn github-btn">See on GitHub
+  <i class="fab fa-github"></i></a>
+
+<!-- Live demo button -->
+{% elsif page.demo %}
+  <a href = "{{ page.demo }}" target = "_blank" class = "proj-btn github-btn">See Live Demo
+  <i class="fas fa-desktop"></i></a>
+
 {% endif %}
 
 {{ content }}
