--- a/website_v2/_sass/_projects.scss
+++ b/website_v2/_sass/_projects.scss
@@ -52,7 +52,29 @@
 
 .github-btn {
   width: 200px;
-  margin: auto auto 40px auto;
+  margin: auto auto 20px auto;
+}
+
+.proj-btn-link-container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto;
+}
+
+.github-btn-left {
+  width: 200px;
+  margin: 0 0 40px auto;
+  grid-column: 1;
+  display: inline-block;
+}
+
+.demo-btn-right{
+  width: 200px;
+  margin: 0 0 40px 0;
+  grid-column: 2;
+  display: inline-block;
+
 }
 
 .caption {
