--- a/website_v2/_sass/_general.scss
+++ b/website_v2/_sass/_general.scss
@@ -18,6 +18,12 @@ $copySize: 16px;
 $main-fonts: 'Raleway', Helvetica, Arial, sans-serif;
 
 // ----------------------------------------------------------------------------
+// Media Queries
+// ----------------------------------------------------------------------------
+$tablet-width: 810px;
+$mobile-width: 615px;
+
+// ----------------------------------------------------------------------------
 // Mix-ins
 // ----------------------------------------------------------------------------
 %link-hover {
