--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=device-width initial-scale=1.0">
-
+  <meta name="Description" content = "Website for Stephanie Yip, a software engineer.">
   <title>{{site.title}} | {{page.title}}</title>
 
   <link rel = "stylesheet" href = "{{ site.url }}/assets/css/main.css">
