Added photos to photography page

--- a/_sass/_jumbotron.scss
+++ b/_sass/_jumbotron.scss
@@ -44,9 +44,9 @@
   background-image: url('../img/jumbotron/projectsJumbotron.jpg');
 }
 
-// #jumbotron-photography {
-//   background-image: url('../img/jumbotron/resumeJumbotron.jpg');
-// }
+#jumbotron-photography {
+  background-image: url('../img/jumbotron/photographyJumbotron.jpg');
+}
 
 #jumbotron-contact {
   background-image: url('../img/jumbotron/contactJumbotron.jpg');
