--- a/_sass/_responsive-common.scss
+++ b/_sass/_responsive-common.scss
@@ -8,6 +8,20 @@
 }
 
 // ---------------------------------------------------------------------------
+// Change position of jumbotron img
+// ----------------------------------------------------------------------------
+@media all and (min-width: 1100px){
+  .jumbotron {
+    background-position: 0px -250px;
+  }
+
+  #jumbotron-photography {
+    background-position: 0px -350px;
+  }
+}
+
+
+// ---------------------------------------------------------------------------
 // Change margins of container for taller screens
 // ----------------------------------------------------------------------------
 // @media all and (min-height: 1400px){
