--- a/_sass/_responsive-pages.scss
+++ b/_sass/_responsive-pages.scss
@@ -68,12 +68,18 @@
   }
 }
 
-// Mobile
-// @media all and (max-width: $mobile-width){
-//   .proj-img {
-//     height: 200px;
-//   }
-// }
+// ----------------------------------------------------------------------------
+// Photography
+// ----------------------------------------------------------------------------
+@media all and (max-width: $tablet-width){
+  .photo-container {
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  }
+  .photo-item {
+    height: 300px;
+  }
+}
+
 // ----------------------------------------------------------------------------
 // Contact
 // ----------------------------------------------------------------------------
