--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,7 +5,10 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,400i,700" rel="stylesheet">
 
 <!-- jQuery -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 
 <script src = "{{ site.url }}/assets/js/responsiveMenu.js" async></script>
 
