Text changes. Resume + responsive reformatting.

--- a/_layouts/projects_page.html
+++ b/_layouts/projects_page.html
@@ -34,4 +34,4 @@ layout: no_jumbotron
 
 <!-- Return back to projects page -->
 <a href = "{{ site.url }}/projects" class = "proj-btn">
-<i class="fas fa-arrow-left"></i> Go Back</a>
+<i class="fas fa-arrow-left"></i>Back to Projects</a>
