Text edits, fixed resume pg sidebar in Firefox, updated resume pdf

--- a/_includes/resume_projects.html
+++ b/_includes/resume_projects.html
@@ -15,7 +15,7 @@
         {% endfor %}
       </ul>
     </div>
-    <a href = "{{site.url}}/projects/{{proj.link}}.html" class = "resume-proj-link">Details <i class="fas fa-arrow-right"></i></a>
+    <a href = "{{site.url}}/projects/{{proj.link}}" class = "resume-proj-link">Details <i class="fas fa-arrow-right"></i></a>
   {% endfor %}
 
 </div>
