--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -72,13 +72,13 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   box-sizing: border-box;
   background-color: white;
 }
 
 html {
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 body {
