Updated responsive content widths

--- a/_sass/_responsive-common.scss
+++ b/_sass/_responsive-common.scss
@@ -1,7 +1,7 @@
 // ---------------------------------------------------------------------------
 // Change size of container for wider screens
 // ----------------------------------------------------------------------------
-@media all and (min-width: 1400px){xc
+@media all and (min-width: 1400px){
   .container {
     width: 40%;
   }
