--- a/_sass/_responsive-pages.scss
+++ b/_sass/_responsive-pages.scss
@@ -10,6 +10,16 @@
 // ----------------------------------------------------------------------------
 // Resume
 // ----------------------------------------------------------------------------
+@media all and (min-wdith:1400px){
+  .resume-container {
+    margin: 30px 100px 60px auto;
+  }
+
+  .resume-sidebar {
+    margin-right: 10%;
+  }
+}
+
 // Tablet
 @media all and (max-width:$tablet-width){
   .resume-sidebar {
@@ -17,13 +27,17 @@
   }
 
   .resume-content {
-    grid-column: 1 / span 2;
+    grid-column: 1;
   }
 
   .resume-container {
     grid-gap: 0;
     grid-template-columns: 100%;
     margin: 30px auto 30px auto;
+  }
+
+  .resume-section-container {
+    grid-template-columns: 1fr;
   }
 
   #resume-back-to-top {
