--- a/_sass/_responsive-pages.scss
+++ b/_sass/_responsive-pages.scss
@@ -10,7 +10,7 @@
 // ----------------------------------------------------------------------------
 // Resume
 // ----------------------------------------------------------------------------
-@media all and (min-wdith:1400px){
+@media all and (min-width: 1400px){
   .resume-container {
     margin: 30px 100px 60px auto;
   }
