--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,14 @@
 <head>
+  <!-- Google Analytics-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123664786-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-123664786-1');
+  </script>
+
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=device-width initial-scale=1.0">
   <meta name="Description" content = "Website for Stephanie Yip, a software engineer.">
