--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,12 +5,15 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700" rel="stylesheet">
 
 <!-- jQuery -->
-<script
+<!-- <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script> -->
 
+  <!-- JavaScript -->
 <script src = "{{ site.url }}/assets/js/responsiveMenu.js" async></script>
+
+<script src = "{{ site.url }}/assets/js/app.js" async></script>
 
 {% if page.title == "Résumé" %}
   <script src = "{{ site.url }}/assets/js/resumeSidebar.js" async></script>
