--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,10 +2,9 @@
 @import "general";
 @import "header";
 @import "footer";
+@import "section";
 @import "jumbotron";
-@import "home";
 @import "projects";
 @import "photography";
-@import "contact";
 @import "responsive-common";
 @import "responsive-pages";
