--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,8 +1,5 @@
-<div class = "jumbotron" id = "{{ page.jumbotron }}">
+<div class = "jumbotron">
   <div class = "darken-overlay"></div>
-    {% if page.title == "Home" %}
-    <h1>Hello</h1>
-    {% else %}
-    <h1>{{ page.title }}</h1>
-    {% endif %}
+    <h1>Stephanie Yip</h1>
+    <h2>Computer engineer interested in software and learning new things</h2>
 </div>
