--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -3,9 +3,10 @@
 // ----------------------------------------------------------------------------
 $gray: #686F71;
 $lightGray: #858585;
-$grayOpacity: rgba(133,133,133, 0.3);
-$medium: #7D9AB0;
-$mediumOpacity: rgba(125,154,176, 0.9);
+$grayOpacity: rgba(48, 48, 48, 0.3);
+$medium: #283a5f; //#7D9AB0;
+$mediumOpacity: rgba(40,58,95, 0.95); //rgba(125,154,176, 0.9);
+$mediumLine: rgba(228,171,116, 0.6);
 $dark: #253542;
 $accent: #edc59e;
 $darkAccent: #e4ab74;
@@ -28,7 +29,7 @@ $mobile-width: 615px;
 // ----------------------------------------------------------------------------
 %link-hover {
   color: $accent;
-  text-shadow: 0 3px $lightGray;
+  // text-shadow: 0 3px $lightGray;
 }
 
 // Text in header + footer
@@ -72,7 +73,6 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  // overflow-x: hidden;
   box-sizing: border-box;
   background-color: white;
 }
@@ -105,9 +105,11 @@ i {
     word-spacing: 1px;
     font-weight: 700;
     margin-bottom: 10px;
-    color: $darkAccent;
+    color: $medium;
     font-size: $titleSize;
     line-height: 30px;
+    // border-bottom: 3px soild $grayOpacity;
+    background-image: linear-gradient(transparent 70%, $mediumLine 30%);
   }
 
   p {
@@ -146,20 +148,20 @@ i {
   font-weight: 700;
 }
 
-.large-centered {
-  color: $darkAccent;
-  font-weight: 700;
-  font-size: 50px;
-  letter-spacing: 5px;
-  word-spacing: 5px;
-  text-transform: uppercase;
-  text-align: center;
-  line-height: 55px;
-}
+// .large-centered {
+//   color: $darkAccent;
+//   font-weight: 700;
+//   font-size: 50px;
+//   letter-spacing: 5px;
+//   word-spacing: 5px;
+//   text-transform: uppercase;
+//   text-align: center;
+//   line-height: 55px;
+// }
 
-.reg-centered {
-  margin-top: 15px;
-  font-size: 20px;
-  text-align: center;
-  line-height: 30px;
-}
+// .reg-centered {
+//   margin-top: 15px;
+//   font-size: 20px;
+//   text-align: center;
+//   line-height: 30px;
+// }
